--- a/PimWeb/Views/Search/FilesPartial.cshtml
+++ b/PimWeb/Views/Search/FilesPartial.cshtml
@@ -58,7 +58,7 @@
  
     <br/>
 
-    if (Model.SearchResultPage?.Count > 0)
+    if (Model.SearchResultPage.Files.Count > 0)
     {
         <div id="divNoteList" class="">
             @Html.Partial("FileList", Model.SearchResultPage)
