--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -71,16 +71,15 @@
         &copy; @DateTime.Now.Year - MegaPatam Inc
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
-    <script src="~/lib/jquery.fileupload/jquery.fileupload.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true" ></script>
+    <script src="~/lib/jquery-ui/jquery-ui.min.js" asp-append-version="true" ></script>
+    <script src="~/lib/jquery.fileupload/jquery.fileupload.js" asp-append-version="true" ></script>
+    <script src="~/lib/select2/select2.js" asp-append-version="true" ></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true" ></script>
     <script src="~/js/pim.js" asp-append-version="true"></script>
     <script src="~/js/SeeLatestAndCreate.js" asp-append-version="true"></script>
     <script src="~/js/Search.js" asp-append-version="true"></script>
     <script src="~/js/ViewEdit.js" asp-append-version="true"></script>
-
-    @* @await RenderSectionAsync("Scripts", required: false) *@
 
     @if (IsSectionDefined("Init"))
     {
