--- a/PimWeb/Views/ViewEdit/File.cshtml
+++ b/PimWeb/Views/ViewEdit/File.cshtml
@@ -1,36 +1,27 @@
 ﻿@model PimWeb.Models.FileViewModel
 
 @{
-    ViewBag.Title = Model.Title ?? "Unsaved";
-    ViewBag.ShowPageCaption = true;
+    ViewBag.ShowPageCaption = false;
     
     var edit = ViewBag.Edit == true;
     var altModeLinkText = edit ? "View read only" : "Edit";
 }
 
-
-
 @await Html.PartialAsync("FilePartial", Model)
-
-<div>
-    @Html.ActionLink("Back to home page", "Index", "Home")
-    
-    @if (Model.Version.HasValue)
-    {
-        @: |
-        <a href="@Url.Action("Index", new {id = Model.Id, edit = !edit})">@altModeLinkText</a>
-    }
-</div>
 
 <script>
 @section Init
 {
     const config = {
         mainFormSelector: '#mainForm',
-        updateUrl: '@Url.Action("Update")',
+        updateUrl: '@Url.Action("UpdateFile", new {id = Model.Id})',
+        deleteAssociationWithNoteLinkSelector: '#a[delete-note-by-id]',
+        deleteAssociationWithNoteUrl: '@Url.Action("UnlinkNoteFromFile", new {fileId = Model.Id})',
+        noteListSelector: '#divNotes',
         deleteButtonSelector: '#btnDelete',
         updateButtonSelector: '#btnUpdate',
         divInProgressSelector: '#progressIndicator',
+        attributeNameNoteId: 'noteId'
     };
 
     (pim.pages.file && pim.pages.file.init(config));
