fix delete file permanently

--- a/PimWeb/Views/Search/Files.cshtml
+++ b/PimWeb/Views/Search/Files.cshtml
@@ -10,10 +10,10 @@
 {
     const config = {
         mainFormSelector: '#mainForm',
-        deleteNoteUrl: '@Url.Action("Delete")',
-        deleteNoteSelector: '[delete-file-by-id]',
+        deleteUrl: '@Url.Action("DeleteFile", "ViewEdit")',
+        deleteSelector: '[delete-file-by-id]',
         divInProgressSelector: '#progressIndicator',
-        attributeNameNoteId: "fileId",
+        attributeNameFileId: "fileId",
         //divNoteListSelector: "#divNoteList",
     };
 
