--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -84,6 +84,7 @@
     <script src="~/js/Search.js" asp-append-version="true"></script>
     <script src="~/js/ViewEdit.js" asp-append-version="true"></script>
     <script src="~/js/File.js" asp-append-version="true"></script>
+    <script src="~/js/Files.js" asp-append-version="true"></script>
 
     @if (IsSectionDefined("Init"))
     {
