--- a/PimWeb/Views/Shared/NoteList.cshtml
+++ b/PimWeb/Views/Shared/NoteList.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <div note-name class="col-md-11">
                 <span class="text-muted small">@($"{note.LastUpdateTime:ddd dd-MMM-yy, HH:mm} ")</span>
-                <a note-name href="@Url.Action("Index", "ViewEdit", new {id = note.Id})">@note.Caption</a>
+                <a note-name href="@Url.Action("Note", "ViewEdit", new {id = note.Id})">@note.Caption</a>
                 <a delete-note-by-id class="ms-3" href="#" noteId="@note.Id">delete</a>
                 <br/>
                 @if (!note.SearchHeadline.IsNullOrWhiteSpace())
