--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
     <script src="~/js/pim.js" asp-append-version="true"></script>
     <script src="~/js/SeeLatestAndCreate.js" asp-append-version="true"></script>
     <script src="~/js/Search.js" asp-append-version="true"></script>
-    <script src="~/js/ViewEdit.js" asp-append-version="true"></script>
+    <script src="~/js/Note.js" asp-append-version="true"></script>
     <script src="~/js/File.js" asp-append-version="true"></script>
     <script src="~/js/Files.js" asp-append-version="true"></script>
 
