--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -85,6 +85,7 @@
     <script src="~/js/Note.js" asp-append-version="true"></script>
     <script src="~/js/File.js" asp-append-version="true"></script>
     <script src="~/js/Files.js" asp-append-version="true"></script>
+    <script src="~/js/AttachExistingFiles.js" asp-append-version="true"></script>
 
     @if (IsSectionDefined("Init"))
     {
