fix removal of association with note from file page

--- a/PimWeb/Views/Shared/NoteList.cshtml
+++ b/PimWeb/Views/Shared/NoteList.cshtml
@@ -26,4 +26,13 @@
             </div>
         </div>
     }
+    
+    @{
+        var statusMessage = ViewBag.StatusMessage as string;
+    }
+    
+    @if (!statusMessage.IsNullOrWhiteSpace())
+    {
+        <div class="text-info">@statusMessage</div>
+    }
 </div>
