update about page and readme

--- a/PimWeb/Views/Home/About.cshtml
+++ b/PimWeb/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 
 <h3>@ViewBag.Message</h3>
 
-<p>Simple text notes storage with fulltext search powered by Apache Lucene.</p>
+<p>Simple text notes and file storage with fulltext search.</p>
 <br/>
 
 <p>
